openshift/proxy-resources/proxy-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    mojix.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    mojix.service: proxy
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: proxy
    spec:
      containers:
      - args:
        - --conf
        - /etc/Caddyfile
        - -http2=false
        image: mojix/proxy:latest
        name: proxy
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /etc/Caddyfile
          name: caddyfile
          #readOnly: true
        - mountPath: /root/.caddy
          name: proxy-claim1
      hostname: proxy
      restartPolicy: Always
      volumes:
      - name: caddyfile
        configMap:
          name: caddyfile
      - name: proxy-claim1
        persistentVolumeClaim:
          claimName: proxy-claim1
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - proxy
        from:
          kind: ImageStreamTag
          name: proxy:latest
      type: ImageChange
