openshift/proxy-resources/proxy-deploymentconfig2.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    mojix.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    mojix.service: proxy
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        mojix.service: proxy
    spec:
      containers:
      - args:
        - --conf
        - /etc/Caddyfile
        - -http2=false
        image: mojix/proxy:latest
        name: proxy
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /etc
          name: caddyfile-config 
      hostname: proxy
      restartPolicy: Always
      volumes:
      - name: caddyfile-config
        configMap:
          name: caddyfile
          items: 
          - key: Caddyfile
            path: Caddyfile
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - proxy
        from:
          kind: ImageStreamTag
          name: proxy:latest
      type: ImageChange
