openshift/proxy-resources/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mojix.service: proxy
  name: proxy
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    mojix.service: proxy
status:
  loadBalancer: {}
